# protocol_reverse_engineering

./: .gitignore  404.html  A6_IMPLEMENTATION_SUMMARY.md  A6_MULTI_LAYER_DETECTION.md  CHANGELOG.md  LICENSE  LLM_config.json  ReadMe.md  TODO_COMPREHENSIVE.md  index.html  main.py  mkdocs.yml  objects.inv  project-goal.txt  pyproject.toml  requirements-dev.txt  requirements.txt  runned_commands.txt  status.txt  todo  todo.md
architecture/: index.html
contributing/: index.html
docs/: Readme.md  SCHEMA_NOTES.md  architecture.md  contributing.md  getting_started.md  how_to_use.md  index.md  testing.md
getting_started/: index.html
output/: protocol_report.html  protocol_report.md  protocol_report_01.html  protocol_spec_01.md
pre_trained/: industrial_VAE.pth  industrial_encoder_only.pth
prompts/: protocol_synthesis.md  relation_validation.md  semantic_labeling.md
schema/: evaluation_input.schema.json  evaluation_output.schema.json  llm_evidence.schema.json  protocol_model.schema.json
scripts/: 01_collect_pcaps.py  02_dedup_pcaps.py  03_alt_build_corpus.py  03_extract_messages.py  04_build_corpus.py  04_discover_families.py  05_extract_features.py  05_infer_framing.py  06_extract_features.py  06_infer_boundaries.py  07_infer_boundaries.py  07_pair_requests_responses.py  07b_refine_boundaries_llm.py  08_infer_keywords.py  08_pair_requests_responses.py  09_compare_subcluster_hypotheses.py  09_infer_keywords.py  10_compare_subcluster_hypotheses.py  10_infer_relations.py  10b_validate_relations_llm.py  11_infer_semantics.py  11b_label_semantics_llm.py  (+22 more)
(+84 files in other folders)
